--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	</table>
 
 	<h2>About Me</h2>
-	I am currently a PhD student <a href="http://media.au.tsinghua.edu.cn/index.html">BBNC Lab</a> of
+	I am currently a PhD student at <a href="http://media.au.tsinghua.edu.cn/index.html">BBNC Lab</a> of
 	<a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>,
 	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>,
 	advised by Prof. <a href="http://xiangyangji.com/index.php">Xiangyang Ji</a>.
@@ -259,21 +259,16 @@
 
 	<div class='section_div'>
 		<h2>Experience</h2>
-		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - )<br>
-			<i>Visiting Ph.D. student, with co-advisor Dr. Federico Tombari</i>
-		</li>
-		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - )<br>
-			<i>Ph.D. student, with advisor Prof. Xiangyang Ji</i>
-		</li>
-		<li> Hangzhou Zhibei Tech. (Jul. 2018 - Aug. 2018)<br>
-			<i>Research intern, with Dr. Yaohe Cao.</i>
-		</li>
+		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - )<br/>
+			<i>Visiting Ph.D. student, with co-advisor Dr. Federico Tombari</i></li><br/>
+		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - )<br/>
+			<i>Ph.D. student, with advisor Prof. Xiangyang Ji</i></li><br/>
+		<li> Hangzhou Zhibei Tech. (Jul. 2018 - Aug. 2018)<br/>
+			<i>Research intern, with Dr. Yaohe Cao.</i></li><br/>
 		<li> Intel Research Lab China, Beijing. (Jul. 2016 - Nov. 2016)<br>
-			<i>Research intern, with Mr. Fucen Zeng.</i>
-		</li>
-		<li> Department of Image Search, Baidu, Beijing. (Jul. 2015 - Oct. 2015)<br>
-			<i>Research intern, with Dr. Gaolin Fang.</i>
-		</li>
+			<i>Research intern, with Mr. Fucen Zeng.</i></li><br/>
+		<li> Department of Image Search, Baidu, Beijing. (Jul. 2015 - Oct. 2015)<br/>
+			<i>Research intern, with Dr. Gaolin Fang.</i></li><br/>
 		</div>
 		<hr>
 
