--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 	<a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>,
 	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>,
 	advised by Prof. <a href="http://xiangyangji.com/index.php">Xiangyang Ji</a>.
-	I got my BE degree from <a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>),
+	I got my BE degree from <a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>,
 	<a href="http://www.sist.tsinghua.edu.cn/docinfo_eng/index.jsp">School of Information Science and Technology</a>,
-	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>) in 2016.
+	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a> in 2016.
 	My research interests lie in Computer Vision and Deep Learning.
 	Currently, I focus on 6D object pose estimation with RGB based methods.
 	I am also interested in other vision based perception and localization problems in both 2D and 3D world.
