--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
 		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - )<br/>
 			<i>Ph.D. student, with advisor Prof. Xiangyang Ji</i></li><br/>
 		<li> Hangzhou Zhibei Tech. (Jul. 2018 - Aug. 2018)<br/>
-			<i>Research intern, with Dr. Yaohe Cao.</i></li><br/>
+			<i>Research intern, with Dr. Yaohe Cao</i></li><br/>
 		<li> Intel Research Lab China, Beijing. (Jul. 2016 - Nov. 2016)<br>
-			<i>Research intern, with Mr. Fucen Zeng.</i></li><br/>
+			<i>Research intern, with Mr. Fucen Zeng</i></li><br/>
 		<li> Department of Image Search, Baidu, Beijing. (Jul. 2015 - Oct. 2015)<br/>
-			<i>Research intern, with Dr. Gaolin Fang.</i></li><br/>
+			<i>Research intern, with Dr. Gaolin Fang</i></li><br/>
 		</ul>
 		</div>
 
