--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 
 <div class='section_div'>
 <h2>Activities</h2>
-<li>[10/2019] I am a visiting PhD student of the <a href="http://campar.in.tum.de/Chair/ResearchIssueComputerVision">computer vision group</a>,
-	CAMP chair, Technical University of Munich (TUM), co-advised by Dr. <a href="http://campar.in.tum.de/Main/FedericoTombari">Federico Tombari</a>. </li>
+<li>[10/2019] I am a visiting PhD student of the <a href="http://campar.in.tum.de/Chair/ResearchIssueComputerVision">Computer Vision Group</a>,
+	CAMP Chair, Technical University of Munich (TUM), co-advised by Dr. <a href="http://campar.in.tum.de/Main/FedericoTombari">Federico Tombari</a>. </li>
 <li>[10/2019] Our work CDPN won the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
 </div>
 <hr>
