--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 		<td class="pub_td2"><b>CDPN: Coordinates-Based Disentangled Pose Network for Real-Time RGB-Based 6-DoF Object Pose Estimation</b><br>
 			Zhigang Li, Gu Wang, Xiangyang Ji<br>
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2019 (oral)</i>.<br>
-			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>]
+			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>][<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19</a>]
 	</td></tr>
 
 	<tr>
