--- a/index.html
+++ b/index.html
@@ -226,7 +226,16 @@
 
   <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr>
 
-	<tr>
+  	<tr>
+		<td class="pub_td1"><div class="teaser_img_div"><a href="TODO"><img class="teaser_img" src='images/paper/2020cvpr_pfrl.png'/></a></div></td>
+		<td class="pub_td2"><b>PFRL: Pose-Free Reinforcement Learning for 6D Pose Estimation</b><br>
+			Jianzhun Shao, Yuhang Jiang, Gu Wang, Zhigang Li, Xiangyang Ji<br>
+			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</i>.<br>
+			[<a href="TODO">Paper</a>]
+	</td></tr>
+
+
+ 	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html"><img class="teaser_img" src='images/paper/2019iccv_cdpn.png'/></a></div></td>
 		<td class="pub_td2"><b>CDPN: Coordinates-Based Disentangled Pose Network for Real-Time RGB-Based 6-DoF Object Pose Estimation</b><br>
 			Zhigang Li, Gu Wang, Xiangyang Ji<br>
@@ -240,7 +249,7 @@
 		Yi Li, Gu Wang, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
 		<i>In European Conference on Computer Vision (ECCV), 2018 (oral)</i>.<br>
 		[<a href="https://arxiv.org/abs/1804.00175">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>]
-  </td></tr>
+    </td></tr>
 
 
 	<tr>
