--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
  	 <td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/abs/1804.00175"><img class="teaser_img" src='images/paper/2018eccv_deepim_logo.png'/></a></div></td>
 	  <td class="pub_td2"><b>DeepIM: Deep Iterative Matching for 6D Pose Estimation</b><br>
 		Yi Li, Gu Wang, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
-		<i>In European Conference on Computer Vision (ECCV), 2018 (oral)</i>.<br>
+		<i>In International Journal of Computer Vision (IJCV), 2019</i>.<br>
 		[<a href="https://arxiv.org/abs/1804.00175">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>]
     </td></tr>
 
