--- a/index.html
+++ b/index.html
@@ -248,7 +248,18 @@
 	  <td class="pub_td2"><b>DeepIM: Deep Iterative Matching for 6D Pose Estimation</b><br>
 		Yi Li, Gu Wang, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
 		<i>In International Journal of Computer Vision (IJCV), 2019</i>.<br>
-		[<a href="https://arxiv.org/abs/1804.00175">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>]
+		[<a href="https://arxiv.org/abs/1804.00175">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>][bibtex</a>
+	</p><pre><p id="deepim" style="font:18px; display: none">
+	@article{li2019deepim,
+		title={{DeepIM}: Deep Iterative Matching for 6D Pose Estimation},
+		author={Li, Yi and Wang, Gu and Ji, Xiangyang and Xiang, Yu and Fox, Dieter},
+		journal={International Journal of Computer Vision (IJCV)},
+		pages={1--22},
+		year={2019},
+		publisher={Springer}
+		}
+	</p><p></p></pre>
+	<p></p></td>]
     </td></tr>
 
 
