--- a/index.html
+++ b/index.html
@@ -212,6 +212,19 @@
 </div>
 <hr> -->
 
+
+<script type="text/javascript">
+function hideshow(which){
+if (!document.getElementById)
+return
+if (which.style.display=="block")
+which.style.display="none"
+else
+which.style.display="block"
+}
+</script>
+
+
 	<div class='section_div'>
 
 	<h2>Publications</h2>
@@ -260,7 +273,9 @@
 	}
 	</p><p></p></pre>
 	<p></p></td>
-    </td></tr>
+	</td></tr>
+
+	<tr><td><br></td></tr>
 
 
 	<tr>
