--- a/index.html
+++ b/index.html
@@ -257,25 +257,11 @@ which.style.display="block"
 	</td></tr>
 
 	<tr>
- 	 <td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/abs/1804.00175"><img class="teaser_img" src='images/paper/2018eccv_deepim_logo.png'/></a></div></td>
+ 	 <td class="pub_td1"><div class="teaser_img_div"><a href="./paper/Li2019_IJCV_DeepIM.pdf"><img class="teaser_img" src='images/paper/2018eccv_deepim_logo.png'/></a></div></td>
 	  <td class="pub_td2"><b>DeepIM: Deep Iterative Matching for 6D Pose Estimation</b><br>
 		Yi Li, Gu Wang, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
 		<i>In International Journal of Computer Vision (IJCV), 2019</i>.<br>
-		[<a href="https://arxiv.org/abs/1804.00175">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>][<a href="javascript:hideshow(document.getElementById('deepim'))"></a>bibtex</a>]
-	</p><pre><p id="deepim" style="font:18px; display: none">
-	@article{li2019deepim,
-		title={{DeepIM}: Deep Iterative Matching for 6D Pose Estimation},
-		author={Li, Yi and Wang, Gu and Ji, Xiangyang and Xiang, Yu and Fox, Dieter},
-		journal={International Journal of Computer Vision (IJCV)},
-		pages={1--22},
-		year={2019},
-		publisher={Springer}
-	}
-	</p><p></p></pre>
-	<p></p></td>
-	</td></tr>
-
-	<tr><td><br></td></tr>
+		[<a href="./paper/Li2019_IJCV_DeepIM.pdf">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>][<a href="./paper/deepim_ijcv2019.bib">bibtex</a>]
 
 
 	<tr>
