--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ which.style.display="block"
 	  <td class="pub_td2"><b>Action recognition with joint attention on multi-level deep features</b><br>
 		Jialin Wu, Gu Wang, Wukui Yang, Xiangyang Ji<br>
 		<i>arXiv:1607.02556</i>.<br>
-		[<a href="https://arxiv.org/abs/1607.02556">Paper</a>]
+		[<a href="https://arxiv.org/abs/1607.02556">Paper</a>][<a href="./paper/action_2016.bib">bibtex</a>]
   </td></tr>
 
 	</table>
