--- a/index.html
+++ b/index.html
@@ -240,6 +240,15 @@ which.style.display="block"
   <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr>
 
   	<tr>
+		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/pdf/2004.06468.pdf"><img class="teaser_img" src='images/paper/2020eccv_self6d.png'/></a></div></td>
+		<td class="pub_td2"><b>Self6D: Self-Supervised Monocular 6D Object
+			Pose Estimation</b><br>
+			Gu Wang*, Fabian Manhardt*, Jianzhun Shao, Xiangyang Ji, Nassir Navab, Federico Tombari (*: equal contribution)<br>
+			<i>In European Conference On Computer Vision (ECCV), 2020 (oral)</i>.<br>
+			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
+	</td></tr>
+
+    <tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf"><img class="teaser_img" src='images/paper/2020cvpr_pfrl.png'/></a></div></td>
 		<td class="pub_td2"><b>PFRL: Pose-Free Reinforcement Learning for 6D Pose Estimation</b><br>
 			Jianzhun Shao, Yuhang Jiang, Gu Wang, Zhigang Li, Xiangyang Ji<br>
