--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ which.style.display="block"
 			Pose Estimation</b><br>
 			Gu Wang*, Fabian Manhardt*, Jianzhun Shao, Xiangyang Ji, Nassir Navab, Federico Tombari (*: equal contribution)<br>
 			<i>In European Conference On Computer Vision (ECCV), 2020 (oral)</i>.<br>
-			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
+			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
 	</td></tr>
 
     <tr>
@@ -262,7 +262,7 @@ which.style.display="block"
 		<td class="pub_td2"><b>CDPN: Coordinates-Based Disentangled Pose Network for Real-Time RGB-Based 6-DoF Object Pose Estimation</b><br>
 			Zhigang Li, Gu Wang, Xiangyang Ji<br>
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2019 (oral)</i>.<br>
-			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>][<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19</a>][<a href="./paper/cdpn_iccv2019.bib">bibtex</a>]
+			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>][<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19/20</a>][<a href="./paper/cdpn_iccv2019.bib">bibtex</a>]
 	</td></tr>
 
 	<tr>
