--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ which.style.display="block"
 			Pose Estimation</b><br>
 			Gu Wang*, Fabian Manhardt*, Jianzhun Shao, Xiangyang Ji, Nassir Navab, Federico Tombari (*: equal contribution)<br>
 			<i>In European Conference On Computer Vision (ECCV), 2020 (oral)</i>.<br>
-			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
+			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>][<a href="https://www.bilibili.com/video/BV1iV411U77h/">Video</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
 	</td></tr>
 
     <tr>
@@ -253,7 +253,7 @@ which.style.display="block"
 		<td class="pub_td2"><b>PFRL: Pose-Free Reinforcement Learning for 6D Pose Estimation</b><br>
 			Jianzhun Shao, Yuhang Jiang, Gu Wang, Zhigang Li, Xiangyang Ji<br>
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</i>.<br>
-			[<a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf">Paper</a>][<a href="./paper/pfrl_cvpr2020.bib">bibtex</a>]
+			[<a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf">Paper</a>][<a href="https://www.youtube.com/watch?v=URq86Jz5nVU">Video</a>][<a href="./paper/pfrl_cvpr2020.bib">bibtex</a>]
 	</td></tr>
 
 
