--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ which.style.display="block"
 
 	For all publications please check my
 	<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> and
-	<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a>.
+	<a href="https://www.researchgate.net/profile/Gu_Wang">ResearchGate</a> </a>.
 	<br><br>
 
 
@@ -269,6 +269,7 @@ which.style.display="block"
  	 <td class="pub_td1"><div class="teaser_img_div"><a href="./paper/Li2019_IJCV_DeepIM.pdf"><img class="teaser_img" src='images/paper/2018eccv_deepim_logo.png'/></a></div></td>
 	  <td class="pub_td2"><b>DeepIM: Deep Iterative Matching for 6D Pose Estimation</b><br>
 		Yi Li, Gu Wang, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
+		<i>In European Conference On Computer Vision (ECCV), 2018 (oral)</i>.<br>
 		<i>In International Journal of Computer Vision (IJCV), 2019</i>.<br>
 		[<a href="./paper/Li2019_IJCV_DeepIM.pdf">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>][<a href="./paper/deepim_ijcv2019.bib">bibtex</a>]
 
