finish TUM visit

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ which.style.display="block"
 	<div class='section_div'>
 		<h2>Experience</h2>
 		<ul>
-		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - )<br/>
+		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - Sept. 2020)<br/>
 			<i>Visiting Ph.D. student, with co-advisor Dr. Federico Tombari</i></li><br/>
 		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - )<br/>
 			<i>Ph.D. student, with advisor Prof. Xiangyang Ji</i></li><br/>
