--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ which.style.display="block"
 	<td>
 	<div id="DocInfo">
 		<h1>Gu Wang (王谷)</h1>
-		wangg16 [at] mails.tsinghua.edu.cn<br><br>
+		wangg16 at mails dot tsinghua dot edu dot cn<br><br>
 		<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> /
 		<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a> /
 		<a href="https://github.com/wangg12">GitHub</a> </a>
