--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@ which.style.display="block"
 
   <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr>
 
+	<tr>
+		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2102.12145"><img class="teaser_img"
+						src='images/paper/2021cvpr_gdrn.png' /></a></div>
+		</td>
+		<td class="pub_td2"><b>GDR-Net: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation</b><br>
+			Gu Wang, Fabian Manhardt, Federico Tombari, Xiangyang Ji<br>
+			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</i>.<br>
+			[<a href="https://arxiv.org/pdf/2102.12145.pdf">Paper</a>][<a href="https://git.io/GDR-Net">Code</a>][<a href="./paper/gdrn_cvpr2021.bib">bibtex</a>]
+		</td>
+	</tr>
+
   	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/pdf/2004.06468.pdf"><img class="teaser_img" src='images/paper/2020eccv_self6d.png'/></a></div></td>
 		<td class="pub_td2"><b>Self6D: Self-Supervised Monocular 6D Object
