--- a/index.html
+++ b/index.html
@@ -200,10 +200,11 @@ which.style.display="block"
 <!-- <hr> -->
 
 <div class='section_div'>
-<h2>Activities</h2>
+<h2>News</h2>
+<li>[08/2020] Our work CDPNv2 wins the Best Method on Single Dataset Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2020</a>. </li>
 <li>[10/2019] I am a visiting PhD student of the <a href="http://campar.in.tum.de/Chair/ResearchIssueComputerVision">Computer Vision Group</a>,
 	CAMP Chair, Technical University of Munich (TUM), co-advised by Dr. <a href="http://campar.in.tum.de/Main/FedericoTombari">Federico Tombari</a>. </li>
-<li>[10/2019] Our work CDPN won the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
+<li>[10/2019] Our work CDPN wins the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
 </div>
 <hr>
 
