--- a/index.html
+++ b/index.html
@@ -252,6 +252,14 @@ which.style.display="block"
 		</td>
 	</tr>
 
+	<tr>
+		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/abs/2003.05848"><img class="teaser_img" src='images/paper/2020_cpspp.png'/></a></div></td>
+		<td class="pub_td2"><b>CPS++: Improving Class-level 6D Pose and Shape Estimation From Monocular Images With Self-Supervised Learning</b><br>
+			Fabian Manhardt, Gu Wang, Benjamin Busam, Manuel Nickel, Sven Meier, Luca Minciullo, Xiangyang Ji, Nassir Navab<br>
+		  <i>arXiv:2003.05848</i>.<br>
+		  [<a href="https://arxiv.org/abs/2003.05848">Paper</a>][<a href="./paper/cpspp_arxiv_2020.bib">bibtex</a>]
+	</td></tr>
+
   	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/pdf/2004.06468.pdf"><img class="teaser_img" src='images/paper/2020eccv_self6d.png'/></a></div></td>
 		<td class="pub_td2"><b>Self6D: Self-Supervised Monocular 6D Object
@@ -293,7 +301,7 @@ which.style.display="block"
 		Jialin Wu, Gu Wang, Wukui Yang, Xiangyang Ji<br>
 		<i>arXiv:1607.02556</i>.<br>
 		[<a href="https://arxiv.org/abs/1607.02556">Paper</a>][<a href="./paper/action_2016.bib">bibtex</a>]
-  </td></tr>
+    </td></tr>
 
 	</table>
 
