--- a/index.html
+++ b/index.html
@@ -242,11 +242,23 @@ which.style.display="block"
 
 	<tr>
 		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="paper_url"><img class="teaser_img"
+						src='images/paper/2021iccv_so_pose_3.png' /></a></div>
+		</td>
+		<td class="pub_td2"><b>SO-Pose: Exploiting Self-Occlusion for Direct 6D Pose Estimation</b><br>
+			Yan Di, Fabian Manhardt, <b>Gu Wang</b>, Xiangyang Ji, Nassir Navab, Federico Tombari<br>
+			<i>In IEEE International Conference on Computer Vision (ICCV), 2021</i>.<br>
+			[<a href="paper_url">Paper</a>][<a href="./paper/so_pose_iccv2021.bib">bibtex</a>]
+		</td>
+	</tr>
+
+	<tr>
+		<td class="pub_td1">
 			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2102.12145"><img class="teaser_img"
 						src='images/paper/2021cvpr_gdrn.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>GDR-Net: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation</b><br>
-			Gu Wang, Fabian Manhardt, Federico Tombari, Xiangyang Ji<br>
+			<b>Gu Wang</b>, Fabian Manhardt, Federico Tombari, Xiangyang Ji<br>
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</i>.<br>
 			[<a href="https://arxiv.org/pdf/2102.12145.pdf">Paper</a>][<a href="https://git.io/GDR-Net">Code</a>][<a href="./paper/gdrn_cvpr2021.bib">bibtex</a>]
 		</td>
@@ -255,7 +267,7 @@ which.style.display="block"
 	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/abs/2003.05848"><img class="teaser_img" src='images/paper/2020_cpspp.png'/></a></div></td>
 		<td class="pub_td2"><b>CPS++: Improving Class-level 6D Pose and Shape Estimation From Monocular Images With Self-Supervised Learning</b><br>
-			Fabian Manhardt, Gu Wang, Benjamin Busam, Manuel Nickel, Sven Meier, Luca Minciullo, Xiangyang Ji, Nassir Navab<br>
+			Fabian Manhardt, <b>Gu Wang</b>, Benjamin Busam, Manuel Nickel, Sven Meier, Luca Minciullo, Xiangyang Ji, Nassir Navab<br>
 		  <i>arXiv:2003.05848</i>.<br>
 		  [<a href="https://arxiv.org/abs/2003.05848">Paper</a>][<a href="./paper/cpspp_arxiv_2020.bib">bibtex</a>]
 	</td></tr>
@@ -264,7 +276,7 @@ which.style.display="block"
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/pdf/2004.06468.pdf"><img class="teaser_img" src='images/paper/2020eccv_self6d.png'/></a></div></td>
 		<td class="pub_td2"><b>Self6D: Self-Supervised Monocular 6D Object
 			Pose Estimation</b><br>
-			Gu Wang*, Fabian Manhardt*, Jianzhun Shao, Xiangyang Ji, Nassir Navab, Federico Tombari (*: equal contribution)<br>
+			<b>Gu Wang</b>*, Fabian Manhardt*, Jianzhun Shao, Xiangyang Ji, Nassir Navab, Federico Tombari (*: equal contribution)<br>
 			<i>In European Conference on Computer Vision (ECCV), 2020 (oral)</i>.<br>
 			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>][<a href="https://www.bilibili.com/video/BV1iV411U77h/">Video</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
 	</td></tr>
@@ -281,7 +293,7 @@ which.style.display="block"
  	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html"><img class="teaser_img" src='images/paper/2019iccv_cdpn.png'/></a></div></td>
 		<td class="pub_td2"><b>CDPN: Coordinates-Based Disentangled Pose Network for Real-Time RGB-Based 6-DoF Object Pose Estimation</b><br>
-			Zhigang Li, Gu Wang, Xiangyang Ji<br>
+			Zhigang Li, <b>Gu Wang</b>, Xiangyang Ji<br>
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2019 (oral)</i>.<br>
 			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>][<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19/20</a>][<a href="https://www.youtube.com/watch?v=zem03fZWLrQ">Oral Video</a>][<a href="./paper/cdpn_iccv2019.bib">bibtex</a>]
 	</td></tr>
@@ -289,7 +301,7 @@ which.style.display="block"
 	<tr>
  	 <td class="pub_td1"><div class="teaser_img_div"><a href="./paper/Li2019_IJCV_DeepIM.pdf"><img class="teaser_img" src='images/paper/2018eccv_deepim_logo.png'/></a></div></td>
 	  <td class="pub_td2"><b>DeepIM: Deep Iterative Matching for 6D Pose Estimation</b><br>
-		Yi Li, Gu Wang, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
+		Yi Li, <b>Gu Wang</b>, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
 		<i>In European Conference on Computer Vision (ECCV), 2018 (oral)</i>.<br>
 		<i>In International Journal of Computer Vision (IJCV), 2019</i>.<br>
 		[<a href="./paper/Li2019_IJCV_DeepIM.pdf">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>][<a href="./paper/deepim_ijcv2019.bib">bibtex</a>]
@@ -298,7 +310,7 @@ which.style.display="block"
 	<tr>
  	 <td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/abs/1607.02556"><img class="teaser_img" src='images/paper/16_joint_attetion_action_recognition.png'/></a></div></td>
 	  <td class="pub_td2"><b>Action recognition with joint attention on multi-level deep features</b><br>
-		Jialin Wu, Gu Wang, Wukui Yang, Xiangyang Ji<br>
+		Jialin Wu, <b>Gu Wang</b>, Wukui Yang, Xiangyang Ji<br>
 		<i>arXiv:1607.02556</i>.<br>
 		[<a href="https://arxiv.org/abs/1607.02556">Paper</a>][<a href="./paper/action_2016.bib">bibtex</a>]
     </td></tr>
