--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ which.style.display="block"
     <tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf"><img class="teaser_img" src='images/paper/2020cvpr_pfrl.png'/></a></div></td>
 		<td class="pub_td2"><b>PFRL: Pose-Free Reinforcement Learning for 6D Pose Estimation</b><br>
-			Jianzhun Shao, Yuhang Jiang, Gu Wang, Zhigang Li, Xiangyang Ji<br>
+			Jianzhun Shao, Yuhang Jiang, <b>Gu Wang</b>, Zhigang Li, Xiangyang Ji<br>
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</i>.<br>
 			[<a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf">Paper</a>][<a href="https://www.youtube.com/watch?v=URq86Jz5nVU">Video</a>][<a href="./paper/pfrl_cvpr2020.bib">bibtex</a>]
 	</td></tr>
