--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ which.style.display="block"
 		<td class="pub_td2"><b>Self6D: Self-Supervised Monocular 6D Object
 			Pose Estimation</b><br>
 			<b>Gu Wang</b>*, Fabian Manhardt*, Jianzhun Shao, Xiangyang Ji, Nassir Navab, Federico Tombari (*: equal contribution)<br>
-			<i>In European Conference on Computer Vision (ECCV), 2020 (oral)</i>.<br>
+			<i>In European Conference on Computer Vision (ECCV), 2020 (<b>oral</b>)</i>.<br>
 			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>][<a href="https://www.bilibili.com/video/BV1iV411U77h/">Video</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
 	</td></tr>
 
@@ -294,7 +294,7 @@ which.style.display="block"
 		<td class="pub_td1"><div class="teaser_img_div"><a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html"><img class="teaser_img" src='images/paper/2019iccv_cdpn.png'/></a></div></td>
 		<td class="pub_td2"><b>CDPN: Coordinates-Based Disentangled Pose Network for Real-Time RGB-Based 6-DoF Object Pose Estimation</b><br>
 			Zhigang Li, <b>Gu Wang</b>, Xiangyang Ji<br>
-			<i>In IEEE International Conference on Computer Vision (ICCV), 2019 (oral)</i>.<br>
+			<i>In IEEE International Conference on Computer Vision (ICCV), 2019 (<b>oral</b>)</i>.<br>
 			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>][<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19/20</a>][<a href="https://www.youtube.com/watch?v=zem03fZWLrQ">Oral Video</a>][<a href="./paper/cdpn_iccv2019.bib">bibtex</a>]
 	</td></tr>
 
@@ -302,7 +302,7 @@ which.style.display="block"
  	 <td class="pub_td1"><div class="teaser_img_div"><a href="./paper/Li2019_IJCV_DeepIM.pdf"><img class="teaser_img" src='images/paper/2018eccv_deepim_logo.png'/></a></div></td>
 	  <td class="pub_td2"><b>DeepIM: Deep Iterative Matching for 6D Pose Estimation</b><br>
 		Yi Li, <b>Gu Wang</b>, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
-		<i>In European Conference on Computer Vision (ECCV), 2018 (oral)</i>.<br>
+		<i>In European Conference on Computer Vision (ECCV), 2018 (<b>oral</b>)</i>.<br>
 		<i>In International Journal of Computer Vision (IJCV), 2019</i>.<br>
 		[<a href="./paper/Li2019_IJCV_DeepIM.pdf">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>][<a href="./paper/deepim_ijcv2019.bib">bibtex</a>]
 
