--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@ which.style.display="block"
 
 	<tr>
 		<td class="pub_td1">
-			<div class="teaser_img_div"><a href="paper_url"><img class="teaser_img"
+			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2108.08367"><img class="teaser_img"
 						src='images/paper/2021iccv_so_pose_3.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>SO-Pose: Exploiting Self-Occlusion for Direct 6D Pose Estimation</b><br>
 			Yan Di, Fabian Manhardt, <b>Gu Wang</b>, Xiangyang Ji, Nassir Navab, Federico Tombari<br>
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2021</i>.<br>
-			[<a href="paper_url">Paper</a>][<a href="./paper/so_pose_iccv2021.bib">bibtex</a>]
+			[<a href="https://arxiv.org/abs/2108.08367">Paper</a>][<a href="https://github.com/shangbuhuan13/SO-Pose">Code</a>][<a href="./paper/so_pose_iccv2021.bib">bibtex</a>]
 		</td>
 	</tr>
 
