--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ which.style.display="block"
 
 <div class='section_div'>
 <h2>News</h2>
+<li>[12/2021] PhD defended.</li>
 <li>[08/2020] Our work CDPNv2 wins the Best Method on Single Dataset Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2020</a>. </li>
 <li>[10/2019] Our work CDPN wins the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
 </div>
