--- a/index.html
+++ b/index.html
@@ -241,6 +241,18 @@ which.style.display="block"
 
 	<tr>
 		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="todo"><img class="teaser_img"
+						src='images/paper/self6dpp_tpami.png' /></a></div>
+		</td>
+		<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
+			Yan Di, Fabian Manhardt, <b>Gu Wang</b>, Xiangyang Ji, Nassir Navab, Federico Tombari<br>
+			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence, 2021</i>.<br>
+			[<a href="todo">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>][<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
+		</td>
+	</tr>
+
+	<tr>
+		<td class="pub_td1">
 			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2108.08367"><img class="teaser_img"
 						src='images/paper/2021iccv_so_pose_3.png' /></a></div>
 		</td>
@@ -316,7 +328,7 @@ which.style.display="block"
 		<ul>
 		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - Sept. 2020)<br/>
 			<i>Visiting Ph.D. student, with co-advisor Dr. Federico Tombari</i></li><br/>
-		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - )<br/>
+		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - Jan. 2022)<br/>
 			<i>Ph.D. student, with advisor Prof. Xiangyang Ji</i></li><br/>
 		<li> Hangzhou Zhibei Tech. (Jul. 2018 - Aug. 2018)<br/>
 			<i>Research intern, with Dr. Yaohe Cao</i></li><br/>
