--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@ which.style.display="block"
 
 	<tr>
 		<td class="pub_td1">
-			<div class="teaser_img_div"><a href="todo"><img class="teaser_img"
+			<div class="teaser_img_div"><a href="https://doi.org/10.1109/TPAMI.2021.3136301"><img class="teaser_img"
 						src='images/paper/self6dpp_tpami.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
 			Yan Di, Fabian Manhardt, <b>Gu Wang</b>, Xiangyang Ji, Nassir Navab, Federico Tombari<br>
 			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence, 2021</i>.<br>
-			[<a href="todo">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>][<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
+			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>][<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
 		</td>
 	</tr>
 
