--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@ which.style.display="block"
 		<h1>Gu Wang (王谷)</h1>
 		wangg16 at mails dot tsinghua dot edu dot cn<br><br>
 		<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> /
+		<a href="https://orcid.org/0000-0002-0759-0782">ORCID</a> </a> /
+		<a href="https://www.semanticscholar.org/author/29644358">Semantic Scholar</a> </a> /
+		<a href="https://www.aminer.cn/profile/5614478245cedb3397a3fae4">Aminer</a> </a> /
 		<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a> /
 		<a href="https://github.com/wangg12">GitHub</a> </a>
 		<!-- https://orcid.org/0000-0002-0759-0782 -->
