--- a/index.html
+++ b/index.html
@@ -235,8 +235,10 @@ which.style.display="block"
 	<table class="pub_table">
 
 	For all publications please check my
-	<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> and
-	<a href="https://www.researchgate.net/profile/Gu_Wang">ResearchGate</a> </a>.
+	<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> /
+	<a href="https://www.semanticscholar.org/author/29644358">Semantic Scholar</a> </a> /
+	<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a> /
+	<a href="https://orcid.org/0000-0002-0759-0782">ORCID</a> </a>.
 	<br><br>
 
 
