--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ which.style.display="block"
 		<h2>Service</h2>
 		<ul>
 		<li> Reviewer (Conference): CVPR 21/22, ICCV 19/21, ECCV 20, ICRA 22, IJCAI 22, IROS 20</i></li><br/>
-		<li> Reviewer (Journal): RAL 22, RAS 21, TIM 21, Neurocomputing 22, JAS 21, ESWA 21, JVCIR 20/21</i></li><br/>
+		<li> Reviewer (Journal): RAL 22, RAS 21, TIM 21, Neurocomputing 22, JAS 21, ESWA 21/22, JVCIR 20/21</i></li><br/>
 		</ul>
 	</div>
 
