update about me

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ which.style.display="block"
 	<td>
 	<div id="DocInfo">
 		<h1>Gu Wang (王谷)</h1>
-		wangg16 at mails dot tsinghua dot edu dot cn<br><br>
+		wangg12 at tsinghua dot org dot cn<br><br>
 		<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> /
 		<a href="https://orcid.org/0000-0002-0759-0782">ORCID</a> </a> /
 		<a href="https://www.semanticscholar.org/author/29644358">Semantic Scholar</a> </a> /
@@ -187,16 +187,12 @@ which.style.display="block"
 	</table>
 
 	<h2>About Me</h2>
-	I am currently a PhD student at <a href="http://media.au.tsinghua.edu.cn/index.html">BBNC Lab</a> of
-	<a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>,
-	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>,
-	advised by Prof. <a href="http://xiangyangji.com/index.php">Xiangyang Ji</a>.
-	I got my BE degree from <a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>,
+	I received my B.E. degree in 2016 and Ph.D. degree in 2022 from <a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>,
 	<a href="http://www.sist.tsinghua.edu.cn/docinfo_eng/index.jsp">School of Information Science and Technology</a>,
-	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a> in 2016.
+	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>, under the supervision of Prof. <a href="http://xiangyangji.com/index.php">Xiangyang Ji</a>.
 	My research interests lie in Computer Vision and Deep Learning.
-	Currently, I focus on 6D object pose estimation with RGB based methods.
-	I am also interested in other vision based perception and localization problems in both 2D and 3D world.
+	During my Ph.D., I focused on 6D object pose estimation with RGB based methods.
+	I am also interested in other vision and robotics related perception problems in both 2D and 3D worlds.
 	</div>
 	<hr>
 
