update page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- 支持中文 -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Gu Wang - Tsinghua University - BBNC</title>
+<title>Gu Wang</title>
 <style type="text/css">
 	body
 	{
