add arXiv link to self6dpp

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ which.style.display="block"
 		<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
 			<b>Gu Wang</b>*, Fabian Manhardt*, Xingyu Liu, Xiangyang Ji, Federico Tombari<br>
 			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence, 2021</i>.<br>
-			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>][<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
+			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>][<a href="https://arxiv.org/abs/2203.10339">arXiv</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>][<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
 		</td>
 	</tr>
 
