--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@ which.style.display="block"
 	<div class='section_div'>
 		<h2>Service</h2>
 		<ul>
-		<li> Reviewer (Conference): CVPR 21/22, ICCV 19/21, ECCV 20, ICRA 22, IJCAI 22, IROS 20</i></li><br/>
+		<li> Co-organizer of <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and BOP Challenge 2022 @ ECCV 22 </i></li><br/>
+		<li> Reviewer (Conference): CVPR 21/22, ICCV 19/21, ECCV 20/22, ICRA 22, IJCAI 22, IROS 20</i></li><br/>
 		<li> Reviewer (Journal): TIP22, RAL 21/22, RAS 21, TIM 21, PR 22, Neurocomputing 22, JAS 21, ESWA 21/22, JVCIR 20/21/22</i></li><br/>
 		</ul>
 	</div>
