--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@ which.style.display="block"
 
 <div class='section_div'>
 <h2>News</h2>
+<li>[04/2022] I am co-organizing the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and BOP Challenge 2022 @ ECCV 22.</li>		
+<li>[02/2022] I joined JD.com as a member of DMT (Doctoral Management Trainee).</li>	
 <li>[12/2021] PhD defended.</li>
 <li>[08/2020] Our work CDPNv2 wins the Best Method on Single Dataset Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2020</a>. </li>
 <li>[10/2019] Our work CDPN wins the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
@@ -341,7 +343,7 @@ which.style.display="block"
 	<div class='section_div'>
 		<h2>Service</h2>
 		<ul>
-		<li> Co-organizer of <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and BOP Challenge 2022 @ ECCV 22 </i></li><br/>
+		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and BOP Challenge 2022 @ ECCV 22 </i></li><br/>
 		<li> Reviewer (Conference): CVPR 21/22, ICCV 19/21, ECCV 20/22, ICRA 22, IJCAI 22, IROS 20</i></li><br/>
 		<li> Reviewer (Journal): TIP22, RAL 21/22, RAS 21, TIM 21, PR 22, Neurocomputing 22, JAS 21, ESWA 21/22, JVCIR 20/21/22</i></li><br/>
 		</ul>
