--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@ which.style.display="block"
 
 <div class='section_div'>
 <h2>News</h2>
-<li>[04/2022] I am co-organizing the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and BOP Challenge 2022 @ ECCV 22.</li>		
-<li>[02/2022] I joined JD.com as a member of DMT (Doctoral Management Trainee).</li>	
+<li>[04/2022] I am co-organizing the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22.</li>
+<li>[02/2022] I joined JD.com as a member of DMT (Doctoral Management Trainee).</li>
 <li>[12/2021] PhD defended.</li>
 <li>[08/2020] Our work CDPNv2 wins the Best Method on Single Dataset Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2020</a>. </li>
 <li>[10/2019] Our work CDPN wins the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
@@ -329,10 +329,10 @@ which.style.display="block"
 	<div class='section_div'>
 		<h2>Experience</h2>
 		<ul>
-		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - Sept. 2020)<br/>
-			<i>Visiting Ph.D. student, with co-advisor Dr. Federico Tombari</i></li><br/>
 		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - Jan. 2022)<br/>
 			<i>Ph.D. student, with advisor Prof. Xiangyang Ji</i></li><br/>
+		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - Sept. 2020)<br/>
+			<i>Visiting Ph.D. student, with co-advisor Dr. Federico Tombari</i></li><br/>
 		<li> Hangzhou Zhibei Tech. (Jul. 2018 - Aug. 2018)<br/>
 			<i>Research intern, with Dr. Yaohe Cao</i></li><br/>
 		<li> Department of Image Search, Baidu, Beijing. (Jul. 2015 - Oct. 2015)<br/>
@@ -343,7 +343,7 @@ which.style.display="block"
 	<div class='section_div'>
 		<h2>Service</h2>
 		<ul>
-		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and BOP Challenge 2022 @ ECCV 22 </i></li><br/>
+		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22 </i></li><br/>
 		<li> Reviewer (Conference): CVPR 21/22, ICCV 19/21, ECCV 20/22, ICRA 22, IJCAI 22, IROS 20</i></li><br/>
 		<li> Reviewer (Journal): TIP22, RAL 21/22, RAS 21, TIM 21, PR 22, Neurocomputing 22, JAS 21, ESWA 21/22, JVCIR 20/21/22</i></li><br/>
 		</ul>
