--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@ which.style.display="block"
 <li>[04/2022] I am co-organizing the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22.</li>
 <li>[02/2022] I joined JD.com as a member of DMT (Doctoral Management Trainee).</li>
 <li>[12/2021] PhD defended.</li>
-<li>[08/2020] Our work CDPNv2 wins the Best Method on Single Dataset Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2020</a>. </li>
-<li>[10/2019] Our work CDPN wins the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
+<li>[08/2020] Our work CDPNv2 won the Best Method on Single Dataset Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2020</a>. </li>
+<li>[10/2019] Our work CDPN won the Best RGB-Only Method Award of <a href="https://bop.felk.cvut.cz/leaderboards/">BOP Challenge 2019</a>. </li>
 </div>
 <hr>
 
@@ -235,12 +235,27 @@ which.style.display="block"
 	For all publications please check my
 	<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> /
 	<a href="https://www.semanticscholar.org/author/29644358">Semantic Scholar</a> </a> /
-	<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a> /
-	<a href="https://orcid.org/0000-0002-0759-0782">ORCID</a> </a>.
+	<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a>.
 	<br><br>
 
 
   <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr>
+	<tr>
+		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="todo"><img class="teaser_img"
+						src='images/paper/2022eccv_catre.png' /></a></div>
+		</td>
+		<td class="pub_td2"><b>CATRE: Iterative Point Clouds Alignment for Category-level Object Pose Refinement</b><br>
+			<a href="https://lliu-xingyu.github.io/">Xingyu Liu*</a>,
+			<b> Gu Wang*</b>,
+			<a href="http://yili.vision/"> Yi Li</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a><br>
+			<i>In European Conference on Computer Vision (ECCV), 2022</i>.<br>
+			[<a href="todo">Paper</a>][<a href="todo">arXiv</a>]
+			[<a href="https://github.com/THU-DA-6D-Pose-Group/CATRE">Code</a>]
+			[<a href="./paper/catre_eccv2022.bib">bibtex</a>]
+		</td>
+	</tr>
 
 	<tr>
 		<td class="pub_td1">
@@ -248,9 +263,16 @@ which.style.display="block"
 						src='images/paper/self6dpp_tpami.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
-			<b>Gu Wang</b>*, Fabian Manhardt*, Xingyu Liu, Xiangyang Ji, Federico Tombari<br>
-			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence, 2021</i>.<br>
-			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>][<a href="https://arxiv.org/abs/2203.10339">arXiv</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>][<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
+			<b>Gu Wang</b>*,
+			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt*</a>,
+			<a href="https://lliu-xingyu.github.io/"> Xingyu Liu</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
+			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a><br>
+			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</i>.<br>
+			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
+			[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
+			[<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>]
+			[<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
 		</td>
 	</tr>
 
@@ -260,9 +282,16 @@ which.style.display="block"
 						src='images/paper/2021iccv_so_pose_3.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>SO-Pose: Exploiting Self-Occlusion for Direct 6D Pose Estimation</b><br>
-			Yan Di, Fabian Manhardt, <b>Gu Wang</b>, Xiangyang Ji, Nassir Navab, Federico Tombari<br>
+			<a href="https://scholar.google.com/citations?user=HSlGGvwAAAAJ">Yan Di</a>,
+			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt</a>,
+			<b> Gu Wang</b>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
+			<a href="https://www.cs.cit.tum.de/camp/members/cv-nassir-navab/nassir-navab/"> Nassir Navab</a>,
+			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a><br>
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2021</i>.<br>
-			[<a href="https://arxiv.org/abs/2108.08367">Paper</a>][<a href="https://github.com/shangbuhuan13/SO-Pose">Code</a>][<a href="./paper/so_pose_iccv2021.bib">bibtex</a>]
+			[<a href="https://arxiv.org/abs/2108.08367">Paper</a>]
+			[<a href="https://github.com/shangbuhuan13/SO-Pose">Code</a>]
+			[<a href="./paper/so_pose_iccv2021.bib">bibtex</a>]
 		</td>
 	</tr>
 
@@ -272,53 +301,93 @@ which.style.display="block"
 						src='images/paper/2021cvpr_gdrn.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>GDR-Net: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation</b><br>
-			<b>Gu Wang</b>, Fabian Manhardt, Federico Tombari, Xiangyang Ji<br>
+			<b>Gu Wang</b>,
+			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt</a>,
+			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a><br>
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</i>.<br>
-			[<a href="https://arxiv.org/pdf/2102.12145.pdf">Paper</a>][<a href="https://git.io/GDR-Net">Code</a>][<a href="./paper/gdrn_cvpr2021.bib">bibtex</a>]
+			[<a href="https://arxiv.org/pdf/2102.12145.pdf">Paper</a>]
+			[<a href="https://git.io/GDR-Net">Code</a>]
+			[<a href="./paper/gdrn_cvpr2021.bib">bibtex</a>]
 		</td>
 	</tr>
 
 	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/abs/2003.05848"><img class="teaser_img" src='images/paper/2020_cpspp.png'/></a></div></td>
 		<td class="pub_td2"><b>CPS++: Improving Class-level 6D Pose and Shape Estimation From Monocular Images With Self-Supervised Learning</b><br>
-			Fabian Manhardt, <b>Gu Wang</b>, Benjamin Busam, Manuel Nickel, Sven Meier, Luca Minciullo, Xiangyang Ji, Nassir Navab<br>
+			<a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
+			<b> Gu Wang</b>,
+			<a href="https://www.cs.cit.tum.de/camp/members/benjamin-busam/"> Benjamin Busam</a>,
+			<a href="https://campar.in.tum.de/Main/ManuelNickel"> Manuel Nickel</a>,
+			<a href="https://www.linkedin.com/in/sven-meier-4ba83342/"> Sven Meier</a>,
+			<a href="https://scholar.google.co.uk/citations?user=rUSxe4AAAAAJ&hl=en"> Luca Minciullo</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
+			<a href="https://www.cs.cit.tum.de/camp/members/cv-nassir-navab/nassir-navab/"> Nassir Navab</a><br>
 		  <i>arXiv:2003.05848</i>.<br>
-		  [<a href="https://arxiv.org/abs/2003.05848">Paper</a>][<a href="./paper/cpspp_arxiv_2020.bib">bibtex</a>]
+		  [<a href="https://arxiv.org/abs/2003.05848">Paper</a>]
+		  [<a href="./paper/cpspp_arxiv_2020.bib">bibtex</a>]
 	</td></tr>
 
   	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/pdf/2004.06468.pdf"><img class="teaser_img" src='images/paper/2020eccv_self6d.png'/></a></div></td>
 		<td class="pub_td2"><b>Self6D: Self-Supervised Monocular 6D Object
 			Pose Estimation</b><br>
-			<b>Gu Wang</b>*, Fabian Manhardt*, Jianzhun Shao, Xiangyang Ji, Nassir Navab, Federico Tombari (*: equal contribution)<br>
+			<b>Gu Wang</b>*,
+			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt*</a>,
+			<a href="https://www.aminer.cn/profile/jianzhun-shao/61775b3860a9653f448f03e7"> Jianzhun Shao</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
+			<a href="https://www.cs.cit.tum.de/camp/members/cv-nassir-navab/nassir-navab/"> Nassir Navab</a>,
+			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a><br>
 			<i>In European Conference on Computer Vision (ECCV), 2020 (<b>oral</b>)</i>.<br>
-			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>][<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>][<a href="https://www.bilibili.com/video/BV1iV411U77h/">Video</a>][<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
+			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>]
+			[<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>]
+			[<a href="https://www.bilibili.com/video/BV1iV411U77h/">Video</a>]
+			[<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
 	</td></tr>
 
     <tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf"><img class="teaser_img" src='images/paper/2020cvpr_pfrl.png'/></a></div></td>
 		<td class="pub_td2"><b>PFRL: Pose-Free Reinforcement Learning for 6D Pose Estimation</b><br>
-			Jianzhun Shao, Yuhang Jiang, <b>Gu Wang</b>, Zhigang Li, Xiangyang Ji<br>
+			<a href="https://www.aminer.cn/profile/jianzhun-shao/61775b3860a9653f448f03e7">Jianzhun Shao</a>,
+			<a href="https://scholar.google.com/citations?user=hBuJU48AAAAJ&hl=en"> Yuhang Jiang</a>,
+			<b> Gu Wang</b>,
+			<a href="https://scholar.google.com/citations?hl=en&user=CVVh3DIAAAAJ"> Zhigang Li</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a><br>
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</i>.<br>
-			[<a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf">Paper</a>][<a href="https://www.youtube.com/watch?v=URq86Jz5nVU">Video</a>][<a href="./paper/pfrl_cvpr2020.bib">bibtex</a>]
+			[<a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf">Paper</a>]
+			[<a href="https://www.youtube.com/watch?v=URq86Jz5nVU">Video</a>]
+			[<a href="./paper/pfrl_cvpr2020.bib">bibtex</a>]
 	</td></tr>
 
 
  	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html"><img class="teaser_img" src='images/paper/2019iccv_cdpn.png'/></a></div></td>
 		<td class="pub_td2"><b>CDPN: Coordinates-Based Disentangled Pose Network for Real-Time RGB-Based 6-DoF Object Pose Estimation</b><br>
-			Zhigang Li, <b>Gu Wang</b>, Xiangyang Ji<br>
+			<a href="https://scholar.google.com/citations?hl=en&user=CVVh3DIAAAAJ">Zhigang Li</a>,
+			<b> Gu Wang</b>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a><br>
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2019 (<b>oral</b>)</i>.<br>
-			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>][<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19/20</a>][<a href="https://www.youtube.com/watch?v=zem03fZWLrQ">Oral Video</a>][<a href="./paper/cdpn_iccv2019.bib">bibtex</a>]
+			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>]
+			[<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19/20</a>]
+			[<a href="https://www.youtube.com/watch?v=zem03fZWLrQ">Oral Video</a>]
+			[<a href="./paper/cdpn_iccv2019.bib">bibtex</a>]
 	</td></tr>
 
 	<tr>
  	 <td class="pub_td1"><div class="teaser_img_div"><a href="./paper/Li2019_IJCV_DeepIM.pdf"><img class="teaser_img" src='images/paper/2018eccv_deepim_logo.png'/></a></div></td>
 	  <td class="pub_td2"><b>DeepIM: Deep Iterative Matching for 6D Pose Estimation</b><br>
-		Yi Li, <b>Gu Wang</b>, Xiangyang Ji, Yu Xiang, Dieter Fox<br>
+		<a href="http://yili.vision/">Yi Li</a>,
+		<b> Gu Wang</b>,
+		<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
+		<a href="https://yuxng.github.io/"> Yu Xiang</a>,
+		<a href="http://homes.cs.washington.edu/~fox/"> Dieter Fox</a><br>
 		<i>In European Conference on Computer Vision (ECCV), 2018 (<b>oral</b>)</i>.<br>
 		<i>In International Journal of Computer Vision (IJCV), 2020</i>.<br>
-		[<a href="./paper/Li2019_IJCV_DeepIM.pdf">Paper</a>][<a href="https://github.com/liyi14/mx-DeepIM">Code</a>][<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>][<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>][<a href="./paper/deepim_ijcv2019.bib">bibtex</a>]
+		[<a href="./paper/Li2019_IJCV_DeepIM.pdf">Paper</a>]
+		[<a href="https://github.com/liyi14/mx-DeepIM">Code</a>]
+		[<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>]
+		[<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>]
+		[<a href="./paper/deepim_ijcv2019.bib">bibtex</a>]
 
 	</table>
 
