--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 	}
 	td.pub_td2
 	{
+		font-size: 16px;
 	}
 	td.sub_heading
 	{
@@ -120,7 +121,8 @@
 		background-color: #FFF;
 	}
 	img.teaser_img {
-		width: 256px;
+		/* width: 256px; */
+		width: 100px;
 		display: block;
     margin-left: auto;
     margin-right: auto;
@@ -132,7 +134,8 @@
 		border-radius: 20px;
 	}
 	div.teaser_img_div {
-		width: 286px;
+		/* width: 286px; */
+		width: 100px;
 	}
 
 
