--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 	{
 		color: #3B3B3B;
 		font-weight: 700;
-		font-size:20px;
+		/* font-size:20px; */
+		font-size:120%;
 	}
 	tr {
 		background-color: #FFF;
@@ -238,11 +239,10 @@ which.style.display="block"
 	For all publications please check my
 	<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> /
 	<a href="https://www.semanticscholar.org/author/29644358">Semantic Scholar</a> </a> /
-	<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a>.
-	<br><br>
+	<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a>.<br>
+	(* indicates equal contribution)<br>
 
-
-  <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr>
+  <!-- <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr> -->
 	<tr>
 		<td class="pub_td1">
 			<div class="teaser_img_div"><a href="todo"><img class="teaser_img"
