--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ which.style.display="block"
   <!-- <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr> -->
 	<tr>
 		<td class="pub_td1">
-			<div class="teaser_img_div"><a href="todo"><img class="teaser_img"
+			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2207.08082"><img class="teaser_img"
 						src='images/paper/2022eccv_catre.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>CATRE: Iterative Point Clouds Alignment for Category-level Object Pose Refinement</b><br>
@@ -254,7 +254,7 @@ which.style.display="block"
 			<a href="http://yili.vision/"> Yi Li</a>,
 			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a><br>
 			<i>In European Conference on Computer Vision (ECCV), 2022</i>.<br>
-			[<a href="todo">Paper</a>][<a href="todo">arXiv</a>]
+			[<a href="todo">Paper</a>][<a href="https://arxiv.org/abs/2207.08082">arXiv</a>]
 			[<a href="https://github.com/THU-DA-6D-Pose-Group/CATRE">Code</a>]
 			[<a href="./paper/catre_eccv2022.bib">bibtex</a>]
 		</td>
