--- a/paper/catre_eccv2022.html
+++ b/paper/catre_eccv2022.html
@@ -1,3 +1,5 @@
+<pre>
+  <code>
 @InProceedings{liu_2022_catre,
   title     = {{CATRE:} Iterative Point Clouds Alignment for Category-level Object Pose Refinement},
   author    = {Liu, Xingyu and Wang, Gu and Li, Yi and Ji, Xiangyang},
@@ -5,3 +7,5 @@
   month     = {October},
   year      = {2022}
 }
+  </code>
+</pre>
