--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ which.style.display="block"
 			<i>In European Conference on Computer Vision (ECCV), 2022</i>.<br>
 			[<a href="todo">Paper</a>][<a href="https://arxiv.org/abs/2207.08082">arXiv</a>]
 			[<a href="https://github.com/THU-DA-6D-Pose-Group/CATRE">Code</a>]
-			[<a href="./paper/catre_eccv2022.bib">bibtex</a>]
+			[<a href="./paper/catre_eccv2022.html">bibtex</a>]
 		</td>
 	</tr>
 
